--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "freelancer",
-  "title": "Freelancer",
-  "version": "3.3.7+1",
-  "homepage": "http://startbootstrap.com/template-overviews/freelancer",
-  "author": "Start Bootstrap",
+  "name": "Vânia Rosa - Code & Design",
+  "title": "Vânia Rosa - Code & Design",
+  "version": "0.1",
+  "homepage": "",
+  "author": "Vânia Rosa",
   "license": {
-    "type": "MIT",
-    "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
+    "type": "",
+    "url": ""
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
@@ -22,6 +22,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-freelancer.git"
+    "url": "https://github.com/vaniarosa/vaniarosa.github.io/portfolio"
   }
 }
